# zerotest

./: pyproject.toml
tests/: test_zerotest.py
zerotest/: __main__.py  main.py
