[tool.poetry]
name = "zerotest"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"
zeroconf = "^0.39.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.990"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
